# cdk

./: .cursorrules  Cargo.toml  Dockerfile  Dockerfile.arm  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  daily-flake-check.yml  docker-publish-arm.yml  docker-publish.yml
.test-strike/: start.sh
.test-strike/logs/: cdk-mintd.log.2025-11-10  cdk-mintd.log.2025-11-11
.test2/: start.sh
crates/cashu/src/nuts/: mod.rs  nut05.rs  nut06.rs  nut23.rs
crates/cdk-agicash/: Cargo.toml  README.md
crates/cdk-agicash/src/: closed_loop_manager.rs  lib.rs  lnurl.rs  supervisor.rs
crates/cdk-agicash/src/fee/: backend.rs  calculator.rs  config.rs  error.rs  manager.rs  mod.rs  payout.rs
crates/cdk-agicash/src/square/: README.md  api.rs  client.rs  db.rs  error.rs  lib.rs  mod.rs  sync.rs  types.rs  webhook.rs
crates/cdk-axum/src/: router_handlers.rs
crates/cdk-cln/src/: lib.rs
crates/cdk-common/src/: error.rs  mint.rs  payment.rs
crates/cdk-common/src/database/mint/: mod.rs
crates/cdk-common/src/database/mint/test/: mint.rs
crates/cdk-fake-wallet/: Cargo.toml
crates/cdk-fake-wallet/src/: error.rs  lib.rs
crates/cdk-ffi/src/: types.rs
crates/cdk-ffi/src/types/: mint.rs
crates/cdk-integration-tests/: Cargo.toml
crates/cdk-integration-tests/src/: init_auth_mint.rs  init_pure_tests.rs  shared.rs
crates/cdk-integration-tests/tests/: mint.rs
crates/cdk-ldk-node/src/: lib.rs
crates/cdk-lnbits/src/: lib.rs
crates/cdk-lnd/src/: lib.rs
crates/cdk-mint-rpc/src/mint_rpc_cli/subcommands/: update_nut05.rs
crates/cdk-mint-rpc/src/proto/: cdk-mint-rpc.proto  server.rs
crates/cdk-mintd/: Cargo.toml  example.config.toml
crates/cdk-mintd/src/: config.rs  lib.rs  setup.rs
crates/cdk-mintd/src/env_vars/: agicash.rs  fake_wallet.rs  ln.rs  mod.rs  nwc.rs  strike.rs
crates/cdk-nwc/: Cargo.toml
crates/cdk-nwc/src/: error.rs  lib.rs
crates/cdk-payment-processor/: Cargo.toml
crates/cdk-payment-processor/src/proto/: mod.rs  payment_processor.proto
crates/cdk-sql-common/src/mint/: mod.rs  quotes.rs
crates/cdk-sql-common/src/mint/migrations/postgres/: 20251117000000_add_mint_quote_fee.sql
crates/cdk-sql-common/src/mint/migrations/sqlite/: 20251117000000_add_mint_quote_fee.sql
crates/cdk-sql-common/src/wallet/: mod.rs
crates/cdk-square/: Cargo.toml  README.md
crates/cdk-square/src/: client.rs  config.rs  db.rs  error.rs  lib.rs  sync.rs  types.rs  util.rs  webhook.rs
crates/cdk-strike/: Cargo.toml  cargo.toml
crates/cdk-strike/src/: error.rs  lib.rs
crates/cdk-strike/src/api/: error.rs  mod.rs  types.rs  webhook.rs
crates/cdk/src/mint/: builder.rs  melt.rs  mod.rs
crates/cdk/src/mint/issue/: mod.rs
crates/cdk/src/mint/melt/: mod.rs
misc/: justfile.custom.just
