[package]
name = "cdk-agicash"
version.workspace = true
authors = ["CDK Developers"]
description = "Exteneded CDK functionality for Agicash"
homepage = "https://github.com/MakePrisms/cdk"
repository = "https://github.com/MakePrisms/cdk.git"
edition.workspace = true
rust-version.workspace = true # MSRV
license.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
cashu.workspace = true
cdk-common = { workspace = true, default-features = false, features = ["mint"] }
parking_lot = "0.12.5"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true
axum.workspace = true
futures.workspace = true
reqwest.workspace = true
bitcoin.workspace = true
rustls.workspace = true

# Square payment integration
squareup = { version = "2.13.2", default-features = false, features = ["rustls-tls"] }

# PostgreSQL database for OAuth credentials
tokio-postgres = "0.7.13"
postgres-native-tls = "0.5.1"
native-tls = "0.2"

