[package]
name = "cdk-nwc"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK nwc backend"
readme = "README.md"

[features]
default = ["square"]
square = ["dep:cdk-square"]

[dependencies]
nwc = "0.43.0"
async-trait.workspace = true
bitcoin.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
rustls.workspace = true
axum.workspace = true
cdk-square = { workspace = true, optional = true }