[package]
name = "cdk-square"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK Square payment backend for internal payment tracking"
readme = "README.md"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true
axum.workspace = true

# Square payment integration
squareup = { version = "2.13.2", default-features = false, features = ["rustls-tls"] }
reqwest = { workspace = true }
bitcoin = { workspace = true }
rustls = { workspace = true }

# PostgreSQL database for OAuth credentials
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13"
rustls-native-certs = "0.8"
webpki-roots = "0.26"

