[package]
name = "cdk-strike"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK ln backend for Strike"
readme = "README.md"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
uuid.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
url.workspace = true
rand.workspace = true
ring = "0.17"
hex = "0.4"
urlencoding = "2"